Fix issue with application jumping out of frame
When a list item, that positioned in bottom close to the edge
is clicked, the whole application jumps out of frame. Moving the
loading message div and not allowing it to go outside the frame when
it fades out seems to have fixed this.

--- a/src/styles/components/list.scss
+++ b/src/styles/components/list.scss
@@ -95,6 +95,9 @@
 	&:hover:not(.expanded) {
 		background: $dover-gray;
 	}
+	&:last-child {
+		margin-bottom: 20px;
+	}
 }
 .list-item-title {
 	float: left;
