--- a/src/styles/components/loading.scss
+++ b/src/styles/components/loading.scss
@@ -2,7 +2,7 @@
   visibility: hidden;
   position: absolute;
   z-index: 5;
-  right: 60px;
+  left: 40px;
   bottom: 40px;
   opacity: 0;
   padding: 10px 20px 10px 37px;
